--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="loading">Results are loading</string>
     <string name="no_search_term">No results found, try another term</string>
     <string name="no_network">Network error</string>
-    <string name="qr_share">Qr share</string>
-    <string name="share_with_sms">Share with sms</string>
+    <string name="qr_share">Share with Qr</string>
+    <string name="share_with_sms">Share with SMS</string>
     <string name="edit_saved_rating">edit previously saved rating</string>
     <string name="edit_review">Edit review</string>
     <string name="scan_the_qr_code_to_display_the_review">scan the qr code to display the review</string>
